--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     and back-end development, empowering me to craft dynamic and intuitive web applications. With a
                     keen focus on responsiveness and user-centric design, I strive to deliver seamless and captivating
                     user experiences. <a href="./resume.html">View resume</a> and <a
-                      href="./portfolio/portfolio.html">View all project</a>.
+                      href="./portfolio/portfolio.html">View all Projects</a>.
                   </p>
                   <div class="d-flex flex-wrap about-btn">
                     <a href="./portfolio.html" class="custom-btn">View Portfolio</a>
