--- a/resume.html
+++ b/resume.html
@@ -147,7 +147,7 @@
                                     <p><i class="fa-solid fa-globe"></i> <a
                                             href="https://www.farhadsr.com/">www.farhadsr.com</a></p>
                                     <p> <i class="fa-solid fa-location-pin"></i> Bangladesh, Dhaka,
-                                        <span>Mirpur</span>
+                                        <span>Mirpur-1</span>
                                     </p>
                                 </div>
                             </div>
@@ -191,21 +191,22 @@
                                                     scalable and maintainable codebases.</li>
                                                 <li>Advanced skills in PHP programming and Laravel framework.</li>
                                             </ul>
+                                            <h4>Website Maintenance</h4>
+                                            <p class="text-end"> FictoTech Solutions Ltd | 2022 - 2023
+                                            </p>
+                                            <p>At FictoTech Solutions Ltd, I spearheaded website updates, coding, and
+                                                collaborated on new features. Additionally, I diligently monitored
+                                                analytics and provided crucial technical support. My contributions
+                                                significantly enhanced cutting-edge IT solutions and digital
+                                                transformation services, benefiting businesses in Bangladesh and beyond.
+                                            </p>
                                             <h4>Web Designer</h4>
-                                            <p class="text-end pe-5"> Design Tech Solutions | 2021 -
+                                            <p class="text-end"> Design Tech Solutions | 2021 -
                                                 2022
                                             </p>
                                             <p>I had the pleasure of working as a web designer at Design Tech Solutions,
                                                 where I collaborated on various projects. My experience with the company
                                                 was exceptionally positive and overwhelming.</p>
-                                            <ul>
-                                                <li>Collaborated with cross-functional teams (designers, marketers,
-                                                    etc.) to deliver high-quality web solutions.</li>
-                                                <li>Utilized Bootstrap and Sass to streamline front-end development and
-                                                    ensure consistency across projects.</li>
-                                                <li>Implemented responsive design techniques resulting in increased
-                                                    mobile traffic and engagement.</li>
-                                            </ul>
                                         </div>
                                         <div class="portfoio-project mt-4">
                                             <h3>PROJECT</h3>
@@ -213,16 +214,22 @@
                                             <p><a
                                                     href="https://github.com/AlMamunFarhad/oop-project-1">https://github.com/AlMamunFarhad/oop-project-1</a>
                                             </p>
-                                            <h4>PHP|Project</h4>
                                             <p><a
-                                                    href="https://corephp1.farhadsr.com/">https://corephp1.farhadsr.com/</a>
+                                                    href="https://github.com/AlMamunFarhad/php-oop-project-2">https://github.com/AlMamunFarhad/php-oop-project-2</a>
                                             </p>
+                                            <h4>PHP|Project</h4>
                                             <p><a
                                                     href="https://github.com/AlMamunFarhad/core-php-cms-1">https://github.com/AlMamunFarhad/core-php-cms-1</a>
                                             </p>
+                                            <p><a
+                                                    href="https://github.com/AlMamunFarhad/core-php-cms-2">https://github.com/AlMamunFarhad/core-php-cms-2</a>
+                                            </p>
                                             <h4>HTML/CSS/Bootstrap|Project</h4>
                                             <p><a
-                                                    href="http://socialmedia.farhadsr.com/">http://socialmedia.farhadsr.com/</a>
+                                                    href="https://github.com/AlMamunFarhad/social-media-project">https://github.com/AlMamunFarhad/social-media-project</a>
+                                            </p>
+                                            <p><a
+                                                    href="https://github.com/AlMamunFarhad/html-css-js-project">https://github.com/AlMamunFarhad/html-css-js-project</a>
                                             </p>
                                         </div>
                                     </div>
@@ -249,20 +256,26 @@
                                         </div>
                                         <div class="education">
                                             <h3 class="mt-4">EDUCATION</h3>
-                                            <h4>Raw Tech Society</h4>
-                                            <P>Basic Web Design <br> January 2021 - September 2021</P>
-                                            <h4>CodersTrust</h4>
-                                            <P>Responsive Web Design
-                                                <br> September 2022 - March 2023
-                                            </P>
                                             <h4>Udemy</h4>
                                             <P>PHP | OOP | Laravel
                                                 <br> November 2021 - 2024
                                             </P>
+                                            <h4>CodersTrust</h4>
+                                            <P>Responsive Web Design
+                                                <br> September 2022 - March 2023
+                                            </P>
+                                            <h4>Raw Tech Society</h4>
+                                            <P>Basic Web Design <br> January 2021 - September 2021</P>
                                             <h4>Bachelor of Science in Chemistry</h4>
                                             <P>Joypurhat Govt. College
                                                 <br> 2017 - 2021
                                             </P>
+                                        </div>
+                                        <div class="interests">
+                                            <h3 class="mt-4">INTERESTS</h3>
+                                            <h4>Udemy</h4>
+                                            <P>Travelling</P>
+                                            <P>Photography</P>
                                         </div>
                                     </div>
                                 </div>
@@ -285,6 +298,10 @@
                                             </g>
                                         </svg>
                                         <span>Fiverr</span>
+                                    </a> </p>
+                                <p><a href="https://www.upwork.com/freelancers/~017add125702c24b0a">
+                                        <i class="fa-brands fa-upwork"></i>
+                                        <span>Upwork</span>
                                     </a> </p>
                                 <p><a
                                         href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i
