--- a/index.html
+++ b/index.html
@@ -165,18 +165,13 @@
             </div>
             <div class="col-xl-3 col-sm-6">
               <div class="skills-content">
-                <div class="skills-img d-flex pt-2">
-                  <div class="skills-img">
-                    <img src="images/php.png" class="img-fluid php-icon" alt="">
-                  </div>
-                  <div class="s-right-img" style="padding-top: .8rem;">
-                    <img src="images/mysql.png" class="img-fluid" alt="">
-                  </div>
+                <div class="skills-img">
+                  <img src="images/laravel.png" class="img-fluid" alt="">
                 </div>
-                <h1>PHP</h1>
-                <p>I'm skilled in server-side scripting languages like PHP and the principles of object-oriented
-                  programming (OOP). I use PHP to develop robust backend solutions, implement business logic, and
-                  interact with databases to retrieve and manipulate data.
+                <h1>LARAVEL</h1>
+                <p>I'm proficient in Laravel, a powerful PHP framework known for its elegance and simplicity. I leverage
+                  Laravel's built-in features and conventions to streamline development, improve code maintainability,
+                  and deliver scalable and secure web applications.
                 </p>
               </div>
             </div>
@@ -194,13 +189,18 @@
             </div>
             <div class="col-xl-3 col-sm-6">
               <div class="skills-content">
-                <div class="skills-img">
-                  <img src="images/laravel.png" class="img-fluid" alt="">
+                <div class="skills-img d-flex pt-2">
+                  <div class="skills-img">
+                    <img src="images/php.png" class="img-fluid php-icon" alt="">
+                  </div>
+                  <div class="s-right-img" style="padding-top: .8rem;">
+                    <img src="images/mysql.png" class="img-fluid" alt="">
+                  </div>
                 </div>
-                <h1>LARAVEL</h1>
-                <p>I'm proficient in Laravel, a powerful PHP framework known for its elegance and simplicity. I leverage
-                  Laravel's built-in features and conventions to streamline development, improve code maintainability,
-                  and deliver scalable and secure web applications.
+                <h1>PHP</h1>
+                <p>I'm skilled in server-side scripting languages like PHP and the principles of object-oriented
+                  programming (OOP). I use PHP to develop robust backend solutions, implement business logic, and
+                  interact with databases to retrieve and manipulate data.
                 </p>
               </div>
             </div>
@@ -208,10 +208,10 @@
               <div class="skills-content">
                 <div class="skills-img d-flex pt-2">
                   <div class="s-left-img">
-                    <img src="images/git.jpg" class="img-fluid" alt="">
+                    <img src="images/git1.png" class="img-fluid" alt="">
                   </div>
                   <div class="s-right-img">
-                    <img src="images/github.jpg" class="img-fluid" alt="">
+                    <img src="images/github.jpg" class="img-fluid github-img" alt="">
                   </div>
                 </div>
                 <h1>Git & Github</h1>
@@ -246,7 +246,7 @@
                     <img src="images/bootstrap.png" class="img-fluid bootstrap-icon" width="500" alt="">
                   </div>
                 </div>
-                <h1>Html Css & Bootstrap</h1>
+                <h1>Html Css & Sass</h1>
                 <p>I have a strong foundation in front-end development, with extensive experience in HTML, CSS, and
                   Bootstrap. I specialize in crafting responsive and visually appealing user interfaces that provide an
                   optimal viewing experience across all devices.
@@ -260,7 +260,7 @@
                     <img src="images/sass.png" class="img-fluid" alt="">
                   </div>
                 </div>
-                <h1>Sass</h1>
+                <h1>Bootstrap & Tailwind</h1>
                 <p>I'm a detail-oriented front-end developer with a specialization in Sass With a keen eye for design
                   and a passion for efficiency, I harness the power of Sass to create elegant, maintainable, and
                   scalable stylesheets that bring websites to life.
