--- a/services.html
+++ b/services.html
@@ -135,8 +135,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="card py-4">
                                     <div class="card-img">
-                                        <img src="images/ui-ux-design.png" class="img-fluid img-responsive img-1"
-                                            alt="">
+                                        <img src="images/service1.png" class="img-fluid img-responsive img-1" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h3>Web Design</h3>
@@ -146,7 +145,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="card py-4">
                                     <div class="card-img">
-                                        <img src="images/ux2.png" class="img-fluid img-responsive" alt="">
+                                        <img src="images/service2.png" class="img-fluid img-responsive" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h3>Web Development</h3>
@@ -156,7 +155,7 @@
                             <div class="col-lg-4 col-md-6">
                                 <div class="card py-4">
                                     <div class="card-img">
-                                        <img src="images/3.png" class="img-fluid img-responsive" alt="">
+                                        <img src="images/service3.png" class="img-fluid img-responsive" alt="">
                                     </div>
                                     <div class="card-body">
                                         <h3>UI & UX Design</h3>
